<resources>
    <string name="app_name">Medical Reminder</string>
    <string name="add_medication_title">Add Medication</string>
    <string name="med_name_question">What Medicine would you like to add?</string>
    <string name="MedicineForm">What form is the medicine?</string>
    <string name="MedStrength">What strength is the medicine?</string>
    <string name="MedReason">What are you taking it for?</string>
    <string name="MedRepeatFrequently">Do you need to take this medicine every day?</string>
    <string name="MedHowOften">How often do you take this medicine?</string>
    <string name="profile_name">User Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="facebook_app_id">932481663978529</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="edite_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="Phone">Phone</string>
    <string name="dateOfBirth">Date Of Birth</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>