<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.user_profile.Profile"
    android:background="@color/addMedicationBackgroundColor">


    <ImageView
        android:id="@+id/close_img_id"
        android:layout_width="31dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/close_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <TextView
        android:id="@+id/edit_profile_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/save_profile_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.405"
        app:layout_constraintStart_toEndOf="@id/close_img_id"
        app:layout_constraintTop_toTopOf="@id/close_img_id"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/save_profile_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/close_img_id" />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.4"
        android:layout_height="100dp"
        android:src="@drawable/ic_account_circle_24"
        app:layout_constraintBottom_toTopOf="@+id/constraint2_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_profile_textview"
        app:layout_constraintVertical_bias="0.714" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingHorizontal="20dp"
        android:paddingVertical="0dp"
        android:id="@+id/constraint2_id"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/rounded_top_corners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.7">

        <TextView
            android:id="@+id/name_textview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <TextView
            android:id="@+id/phone_textview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/Phone"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/name_textview"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/name_textview"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name" />


        <TextView
            android:id="@+id/date_of_birth_textview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/dateOfBirth"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/name_textview"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/name_textview"
            app:layout_constraintTop_toBottomOf="@id/phone" />

        <EditText
            android:id="@+id/date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>